--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@
     font-family: 'SF-Pro-Bold-Italic';
     src: url(./fonts/SFPRODISPLAYHEAVYITALIC.OTF);
 }
+@font-face{
+    font-family: 'SF-Pro-Bold';
+    src: url(./fonts/SFPRODISPLAYBOLD.OTF);
+}
+
+:root{
+    --h2-fontsize: 28px;
+}
 
 
 *{
@@ -117,11 +125,15 @@ article{
 /* About Section */
 
 .avatar{
-    height: 17rem;
+    height: 16rem;
+}
+
+.about-section h2{
+    font-size: var(--h2-fontsize);
 }
 
 .about-section h1{
-    font-family: 'SF-Pro-Bold-Italic', sans-serif;
+    font-family: 'SF-Pro-Bold', sans-serif;
     font-size: 64px;
     background: -webkit-linear-gradient(right, #ff7857, #ffcc72);
     -webkit-background-clip: text;
@@ -130,7 +142,7 @@ article{
 
 .about-section p{
     width: 700px;
-    font-size: 29px;
+    font-size: 28px;
     margin-top: 1.5rem;
 }
 
@@ -160,6 +172,39 @@ article{
     
 }
 
-/* Github Section */
+/* Learning Path Section */
+
+.learning-path h2{
+    display: flex;
+    justify-content: center;
+    font-size: 38px;
+    margin-bottom: 2.5rem;
+}
+
+.learning-blocks{
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    gap: 1rem;
+}
+
+.learning-blocks-container{
+    border-bottom: gray solid 1px;
+    margin-bottom: 1rem;
+}
 
 
+#last-child{
+    border-bottom: none;
+
+}
+
+.logos{
+    display: block;
+}
+
+.completed{
+    font-size: 14px;
+    color: gray;
+    margin: 1rem 0rem 1rem 3.7rem;
+}
