--- a/style.css
+++ b/style.css
@@ -172,6 +172,9 @@ article{
     
 }
 
+/* Gallery Section */
+
+
 /* Learning Path Section */
 
 .learning-path h2{
@@ -181,7 +184,7 @@ article{
     margin-bottom: 2.5rem;
 }
 
-.learning-blocks{
+.learning-blocks, .skills{
     display: flex;
     align-items: center;
     font-size: 20px;
@@ -208,3 +211,19 @@ article{
     color: gray;
     margin: 1rem 0rem 1rem 3.7rem;
 }
+
+/*Admin Section */
+
+.admin{
+    padding: 0;
+}
+
+/*Languages Section */
+
+.languages h2{
+    display: flex;
+    justify-content: center;
+    font-size: 38px;
+    margin-bottom: 2.5rem;
+}
+
