--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ nav{
     justify-content: space-evenly;
     align-items: center;
     height: 2rem;
-    width: 28rem;
+    width: 20rem;
     background: rgb(226, 226, 226);
     padding: 0.3rem ;
     border-radius: 30px;
@@ -235,6 +235,11 @@ article{
     border-radius: 30px;
 }
 
+.projects{
+    padding: 0;
+    cursor: pointer;
+}
+
 
 /* About Section */
 
@@ -331,14 +336,6 @@ article{
     margin: 2rem 0rem 1.5rem 3.2rem;
 }
 
-/*Admin Section */
-
-.projects{
-    padding: 0;
-    cursor: pointer;
-}
-
-
 
 /*Languages Section */
 
@@ -352,7 +349,7 @@ article{
 .skills{
     border-bottom: gray solid 1px;
     width: auto;
-    height: 5.5rem;
+    height: 6.5rem;
 }
 
 /*github section */
@@ -374,10 +371,69 @@ article{
     grid-template-rows: repeat(2, 42%);
     height: 100%;
     width: 100%; 
-    overflow: hidden;
 }
 
-#project-page{
-    overflow: hidden;
+
+
+/*================================== CONTACTS PAGE ==================================*/
+
+
+.wrapper{
+    display: flex;
+    margin-top: 3rem;
+    justify-content: center;
+    align-items: center;
+}
+.contact-wrapper{
+    display: flex;
+    height: 40rem;
+    width: 80rem;
+    border-radius: 40px;
+    background: rgb(255, 255, 255);
+    justify-content: center;
+    align-items: center;
 }
 
+.contact-wrapper h1{
+    margin-bottom: 2rem;
+}
+
+label{
+    padding: 0.5rem;
+}
+
+form{
+    width: 90%;
+    min-width: 600px;
+}
+
+.input-group{
+    margin-bottom: 30px;
+}
+
+input, textarea{
+    width: 100%;
+    padding: 10px;
+    outline: 0;
+    border: 1px solid rgb(202, 202, 202);
+    border-radius: 40px;
+    color: gray;
+    background: transparent;
+    font-size: 15px;
+    margin-top: 1rem;
+}
+
+.submit-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: .3rem;
+    border-radius: 30px;
+    border: 1px solid rgb(143, 143, 143);
+    width: 7rem;
+    height: 2.2rem;
+    cursor: pointer;
+}
+
+#message{
+}
